@@ -1,6 +1,7 @@
 package it.pliot.equipment.conf;
 
 import org.springframework.context.annotation.Bean;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
@@ -14,6 +15,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @EnableMethodSecurity
@@ -35,23 +37,26 @@ public class SecurityConfig {
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
 
         http.authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/*" ).authenticated() // Permette accesso senza autenticazione
-                        .anyRequest().permitAll()
-                ).oauth2ResourceServer(oauth2 -> oauth2
+                .requestMatchers("/api/*" ).authenticated() // Permette accesso senza autenticazione
+                .anyRequest().permitAll()
+        ).oauth2ResourceServer(oauth2 -> oauth2
                 .jwt(jwt -> jwt.jwtAuthenticationConverter( jwtAuthenticationConverter() )
                 )
-        );;
-
+        );
         return http.build();
+
     }
 
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
+     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(List.of("http://localhost:4200")); // Angular
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
-        configuration.setAllowCredentials(true);
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "HEAD", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("Pragma", "Cache-Control", "Content-Type", "Authorization")); // Header consentiti
+        configuration.setExposedHeaders(Arrays.asList("Pragma", "Cache-Control", "Content-Type", "Authorization"));
+        configuration.setAllowCredentials(true); // Consenti credenziali (se necessario)
+        configuration.setMaxAge(3600L); // Tempo di cache della preflight request
+
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
